changes in crm for transport

--- a/app/elements/transportfee-service/transportfee-service.html
+++ b/app/elements/transportfee-service/transportfee-service.html
@@ -1411,8 +1411,8 @@
               var m=d.getMonth()+1;
               var dd=d.getDate();
               var y=d.getFullYear();
-              var currdate=dd+"/"+m+"/"+y;
-              obj.installmentdate=currdate;
+              var currdate=m+"/"+dd+"/"+y;
+              obj.installment_date=currdate;
               obj.installment="Lumpsum";
               obj.amount=totamt;
               obj.discountamount=0;
