--- a/app/elements/zonetostudent-card/zonetostudent-card.html
+++ b/app/elements/zonetostudent-card/zonetostudent-card.html
@@ -1,4 +1,5 @@
 <link rel="import" href="..\..\bower_components/polymer/polymer.html">
+<link rel="import" href="..\..\bower_components/iron-collapse/iron-collapse.html">
 <dom-module id="zonetostudent-card">
 <template>
 <style type="text/css">
@@ -21,7 +22,7 @@
 
 <div class="row enquiry-form">
       <div class="list-group col-sm-12 panel-body form-category">
-      <div class="col-sm-3 enquiry-input">
+      <div class="col-md-3">
        <paper-input  label="Student Name" is="" value="{{value}}" on-keydown="FnSearchStudent"></paper-input>
        <paper-listbox class="dropdown-content" id="zoneallocationinput" on-iron-select="FnSelectStudent">
           <template is="dom-repeat" items="{{itemArray}}" as="item">
