delete cheque shouldn't appear in report

--- a/app/elements/transport-editdelete-cheque-itemcard/transport-editdelete-cheque-itemcard.html
+++ b/app/elements/transport-editdelete-cheque-itemcard/transport-editdelete-cheque-itemcard.html
@@ -23,8 +23,8 @@
        <div style="width: 100%;margin-top: -2%;margin-left: 3%;"><cheque-datepicker showdate="{{chequedate}}"></cheque-datepicker></div>
        <div class="buttons" style="margin-left: -5%;">
         <paper-button id="{{chequeno}}" class="btn btn-primary left" on-click="FnEditcheque">Edit</paper-button>
-        <paper-button id="{{chequeno}}"class="btn btn-primary left" on-click="FnDeletecheque">Delete</paper-button>
-        <paper-button id="{{chequeno}}" class="btn btn-primary left" on-click="FnCancel">Cancel</paper-button>
+        <paper-button id="{{chequeno}}" class="btn btn-primary left" on-click="FnDeletecheque">Delete</paper-button>
+        <paper-button id="{{chequeno}}" class="btn btn-primary left" on-click="FnCancel">Close</paper-button>
       </div>     
     </paper-dialog>  
     </div>
