--- a/app/elements/transportfee-service/transportfee-service.html
+++ b/app/elements/transportfee-service/transportfee-service.html
@@ -1167,6 +1167,7 @@
         this.deletetransportchequeurl=sessionStorage.getItem("addrinfo")+"/deletetransportcheque-service";
         var obj={"schoolid":""};
         obj.schoolid=localStorage.getItem("schoolid");
+        obj.academicyear=localStorage.getItem("curr_sess_academicyear");
         obj.admissionno=enrno;
         obj.chequeno=chequeno;
         obj.bankname=bankname;
@@ -1197,7 +1198,8 @@
         // alert(JSON.stringify(e.detail.response.chequearr));
         var collection=[];
         for(var i=0;i<feearr.length;i++){
-          if(feearr[i].install1_status!=""){
+          if(feearr[i].install1_status=="cleared"||feearr[i].install1_status=="paid"||feearr[i].install1_status=="processing"){
+            alert(feearr[i].install1_status);
             var obj={};
             obj.studentid=feearr[i].student_id;
             obj.installment="Installment1";
@@ -1207,7 +1209,8 @@
             obj.amount=feearr[i].installment_1;
             collection.push(obj);
           }
-          if(feearr[i].install2_status!=""){
+          if(feearr[i].install2_status=="cleared"||feearr[i].install2_status=="paid"||feearr[i].install2_status=="processing"){
+            alert(feearr[i].install2_status);
             var obj={};
             obj.studentid=feearr[i].student_id;
             obj.installment="Installment2";
