transport fee hide

--- a/app/elements/navigation-bar/navigation-bar.html
+++ b/app/elements/navigation-bar/navigation-bar.html
@@ -323,7 +323,7 @@
               <li id="schoolfee">
                 <a href="" aria-hidden="true" data-toggle="modal" data-target="#togglefeepayment"  on-click="FnKit">School Fee</a>
               </li>
-              <li id="transportfee">
+              <li id="transportfee" hidden>
                 <a href="" aria-hidden="true" data-toggle="modal" data-target="#toggletransportfeepayment"  on-click="FnTransportFee">Transport Fee</a>
               </li>
               <li id="customfeepayment">
