Adding new student

--- a/app/elements/dateofbirth-datepicker/dateofbirth-datepicker.html
+++ b/app/elements/dateofbirth-datepicker/dateofbirth-datepicker.html
@@ -39,7 +39,7 @@
       ready:function()
       {
         this.showdate=moment(new Date()).format('L');
-        localStorage.setItem("localsess_curr_date",this.showdate);
+        localStorage.setItem("localsess_start_date",this.showdate);
       },
       FnShowDialog:function(){
         this.date=new Date();
