--- a/app/elements/datepicker-card/datepicker-card.html
+++ b/app/elements/datepicker-card/datepicker-card.html
@@ -21,7 +21,7 @@
       }
     </style>
     <!--component which invokes the predefined date picker control-->
-    <div class="card">
+    <div>
       <paper-input class="btn" on-click="FnShowDialog" raised value="{{showdate}}"></paper-input>
       <paper-dialog id="dialog1" class="paper-date-picker-dialog">
         <paper-date-picker id="picker" date="{{date}}"></paper-date-picker>
