--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -306,4 +306,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="fromdatepicker-card/fromdatepicker-card.html">
 <link rel="import" href="todatepicker-card/todatepicker-card.html">
 <link rel="import" href="zoneinstallment-card/zoneinstallment-card.html">
-<link rel="import" href="add-newstudent-card/add-newstudent-card.html">
+<link rel="import" href="add-newstudent-card/add-newstudent-card.html"><link rel="import" href="zonechange-card/zonechange-card.html">
+<link rel="import" href="transport-cheque-bouncecancel/transport-cheque-bouncecancel.html">
+<link rel="import" href="transport-cheque-bouncecancel-itemcard/transport-cheque-bouncecancel-itemcard.html">
+<link rel="import" href="zone-cancellation-card/zone-cancellation-card.html">
+<link rel="import" href="transport-processing-service/transport-processing-service.html">
