--- a/app/elements/transportfee-card/transportfee-card.html
+++ b/app/elements/transportfee-card/transportfee-card.html
@@ -126,8 +126,8 @@
           academicyear="AY-"+y1+"-"+y2;
           } 
           else{
-          var y1=y+1;
-          var y2=y+1+1;  
+          var y1=y;
+          var y2=y+1;  
           academicyear="AY-"+y1+"-"+y2;
           }
           localStorage.setItem("curr_sess_academicyear",academicyear);
