--- a/app/elements/transport-cheque-bouncecancel/transport-cheque-bouncecancel.html
+++ b/app/elements/transport-cheque-bouncecancel/transport-cheque-bouncecancel.html
@@ -87,7 +87,7 @@
         }
       },
       FnSubmit:function(){  
-        alert(JSON.stringify(cheques));
+        // alert(JSON.stringify(cheques));
         if(cheques.length>0) {
         this.$.transportprocessingservice.FnUpdateChequeStatus(cheques);
         }
